<resources>
    <string name="app_name">Wikipedia Image Search</string>
    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="discover_images_text">Discover Images - </string>
    <string name="search_results_for_string">Search results for </string>
    <string name="search_for_images">""</string>
    <string name="image">image</string>
    <string name="logo">logo</string>
    <string name="reveal_answer">Reveal answer</string>
    <string name="what_is_this_picture_of">Who or what is this picture about?</string>
    <string name="answer">Answer</string>
    <string name="go_to_website">Go to Wikipedia Page</string>
    <string name="no_results">There are no results for</string>
    <string name="search_for_images_hint">Search for images</string>
</resources>
